# sme-synth-data-gen

./: .gitignore  README.md  pyproject.toml
context/: company_bible.md
dataset/: company_meta.json  database.json  documents.json  ground_truth.json  qualitative_rubric.json  submissions_sample.json  submissions_template.json
docs/: verification.md
scripts/: evaluate.py  generate_database.py  generate_files.py
tests/: test_dataset.py
