[project]
name = "sme-synth-data-gen"
version = "1.0.0"
description = "Synthetic Polish-language SME dataset for RAG evaluation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
generate = "scripts.generate_files:main"
generate-db = "scripts.generate_database:main"
evaluate = "scripts.evaluate:main"
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
